[package]
name = "kaloston"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
color-eyre = "0.6.3"
crossterm = "0.28.1"
kalosm = { git = "https://github.com/floneum/floneum", version = "0.3.2", features = ["full"] }
ratatui = { version = "0.29.0", features = ["crossterm"] }
reqwest = { version = "0.12.12", features = ["blocking"] }
scraper = "0.22.0"
serde = "1.0.217"
surrealdb = { version = "2.1.4", features = ["kv-surrealkv"] }
tokio = { version = "1.43.0", features = ["full"] }
